--- a/bible_chapter.html
+++ b/bible_chapter.html
@@ -10,7 +10,7 @@
 
 <style>
 :root{
-  --header-height:88px; /* 헤더 높이(상단 고정용) */
+  --header-height:88px; /* header two-line height approximation */
   --bg:#f6f8fb; --card:#fff; --line:#e5e7eb; --accent:#2563eb; --accent-2:#ffb86b;
   --muted:#475569; --text:#0f172a; --text-strong:#071035; --shadow:rgba(10,20,40,0.06);
 }
@@ -22,9 +22,9 @@ html.dark{
 html{scroll-behavior:smooth}
 body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased}
 
-/* Header exactly like index.html */
-.header{ background:var(--card); border-bottom:1px solid var(--line); position:sticky; top:0; z-index:1000; height:var(--header-height); }
-.header-top{ display:flex; align-items:center; justify-content:space-between; gap:0.75rem; padding:0.6rem 18px; width:100%; box-sizing:border-box; height:100%; }
+/* Header: copied structure and styles from index.html to remain identical */
+.header{ background:var(--card); border-bottom:1px solid var(--line); position:sticky; top:0; z-index:1000; }
+.header-top{ display:flex; align-items:center; justify-content:space-between; gap:0.75rem; padding:0.6rem 18px; width:100%; box-sizing:border-box; }
 .brand{ display:flex; align-items:center; gap:0.7rem; text-decoration:none; color:var(--text); }
 .brand img{ width:46px; height:46px; object-fit:contain; border-radius:6px; background:transparent; }
 .brand .title{ font-size:1.6rem; font-weight:900; color:var(--text-strong); }
@@ -33,7 +33,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 .sp-badge{ padding:0 12px; border-radius:8px; background:transparent; border:1px solid var(--line); font-weight:800; color:var(--accent); min-width:160px; text-align:center; height:40px; display:flex; align-items:center; justify-content:center; font-size:14px; }
 .myhome-btn{ padding:0 12px; border-radius:8px; border:1px solid var(--line); background:var(--card); font-weight:700; color:var(--text); cursor:pointer; height:40px; display:flex; align-items:center; justify-content:center; font-size:14px; box-shadow:0 2px 6px rgba(0,0,0,0.04); text-decoration:none; }
 
-/* Nav exactly like index.html */
+/* Nav: same as index.html */
 .nav-row{ display:flex; align-items:center; justify-content:space-between; gap:0.6rem; padding:0.45rem 18px; border-top:1px solid var(--line); background:transparent; box-sizing:border-box; }
 .nav-left{ display:flex; gap:0.6rem; align-items:center; }
 .nav-left a{ text-decoration:none; padding:0.45rem 0.9rem; border-radius:8px; font-weight:700; color:var(--muted); font-size:0.95rem; }
@@ -48,30 +48,33 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 .theme-switch input:checked + .slider{ background: linear-gradient(90deg,var(--accent),var(--accent-2)); }
 .theme-switch input:checked + .slider::before{ transform: translateX(20px); }
 
-/* Page layout: left TOC, right content; widths similar to earlier pages */
-.container{ max-width:1180px; margin:1.6rem auto; padding:0 18px; display:flex; gap:20px; align-items:flex-start; }
-.sidebar{ width:260px; }
-.content{ flex:1; max-width:880px; background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent); border-radius:12px; padding:20px; box-shadow:0 12px 30px rgba(0,0,0,0.06); }
+/* Layout: leave space on left for fixed TOC. content margin-left equals toc width + gap */
+:root{ --toc-width:260px; --toc-gap:20px; }
+.container{ max-width:1180px; margin:1.6rem auto; padding:0 18px; display:block; }
+.page-wrap{ display:flex; gap:20px; align-items:flex-start; }
 
-/* title */
-.page-title{ font-size:2rem; font-weight:900; margin:4px 0 16px 0; color:var(--text-strong); }
-
-/* toc: fixed on left even when scrolling */
-.toc{ background:var(--card); border-radius:10px; padding:12px; border:1px solid var(--line); box-shadow:0 8px 22px var(--shadow); position:sticky; top:calc(var(--header-height) + 12px); }
+/* TOC fixed on left as remote (always visible) */
+.toc-wrap{ width:var(--toc-width); position:fixed; left:18px; top:calc(var(--header-height) + 12px); }
+.toc{ background:var(--card); border-radius:10px; padding:12px; border:1px solid var(--line); box-shadow:0 8px 22px var(--shadow); }
 .toc h3{ margin:0 0 8px 0; font-size:1rem; font-weight:900; color:var(--text-strong); }
 .toc a{ display:block; padding:8px 10px; border-radius:8px; text-decoration:none; color:var(--muted); font-weight:800; margin-bottom:6px; }
 .toc a:hover{ background:rgba(99,102,241,0.06); color:var(--accent); }
 
-/* chapter block -- ensure anchor target is visible below fixed header */
+/* Content sits to the right with left margin matching TOC width+gap */
+.content{ margin-left: calc(var(--toc-width) + var(--toc-gap)); max-width:880px; background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent); border-radius:12px; padding:20px; box-shadow:0 12px 30px rgba(0,0,0,0.06); }
+
+.page-title{ font-size:2rem; font-weight:900; margin:4px 0 16px 0; color:var(--text-strong); }
+
+/* chapter block -- ensure anchor target visible below fixed header */
 .chapter{ background:var(--card); border:1px solid var(--line); border-radius:10px; padding:18px; margin-bottom:18px; box-shadow:0 6px 18px var(--shadow); scroll-margin-top:calc(var(--header-height) + 16px); }
 .chapter h2{ margin:0 0 10px 0; font-size:1.25rem; color:var(--text-strong); }
 .chapter p{ margin:0; color:var(--muted); line-height:1.9; white-space:pre-wrap; }
 
-/* responsive */
+/* responsive: on small screens TOC becomes relative and content margin removed */
 @media(max-width:980px){
-  .container{ flex-direction:column; padding:1rem; }
-  .sidebar{ width:100%; position:relative; top:auto; order:2; }
-  .toc{ position:relative; top:auto; }
+  .toc-wrap{ position:relative; left:auto; top:auto; width:100%; margin-bottom:12px; }
+  .content{ margin-left:0; }
+  .page-wrap{ display:block; }
 }
 </style>
 </head>
@@ -109,82 +112,85 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 </header>
 
 <div class="container">
-  <aside class="sidebar">
-    <nav class="toc" aria-label="목차">
-      <h3>목차</h3>
-      <a href="bible_chapter.html#1">1장</a>
-      <a href="bible_chapter.html#2">2장</a>
-      <a href="bible_chapter.html#3">3장</a>
-      <a href="bible_chapter.html#4">4장</a>
-      <a href="bible_chapter.html#5">5장</a>
-      <a href="bible_chapter.html#6">6장</a>
-      <a href="bible_chapter.html#7">7장</a>
-      <a href="bible_chapter.html#8">8장</a>
-      <a href="bible_chapter.html#9">9장</a>
-      <a href="bible_chapter.html#10">10장</a>
-      <a href="bible_chapter.html#EX">EX장</a>
-      <a href="bible_photos.html">사진</a>
-    </nav>
-  </aside>
+  <div class="page-wrap">
+    <div class="toc-wrap">
+      <nav class="toc" aria-label="목차">
+        <h3>목차</h3>
+        <a href="bible_chapter.html#1">1장</a>
+        <a href="bible_chapter.html#2">2장</a>
+        <a href="bible_chapter.html#3">3장</a>
+        <a href="bible_chapter.html#4">4장</a>
+        <a href="bible_chapter.html#5">5장</a>
+        <a href="bible_chapter.html#6">6장</a>
+        <a href="bible_chapter.html#7">7장</a>
+        <a href="bible_chapter.html#8">8장</a>
+        <a href="bible_chapter.html#9">9장</a>
+        <a href="bible_chapter.html#10">10장</a>
+        <a href="bible_chapter.html#EX">EX장</a>
+        <a href="bible_photos.html">사진</a>
+      </nav>
+    </div>
 
-  <main class="content" id="mainContent">
-    <h1 class="page-title">자쿠드 성경 — 본문</h1>
+    <main class="content" id="mainContent">
+      <h1 class="page-title">자쿠드 성경 — 본문</h1>
 
-    <section id="1" class="chapter">
-      <h2>제 1장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="1" class="chapter">
+        <h2>제 1장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="2" class="chapter">
-      <h2>제 2장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="2" class="chapter">
+        <h2>제 2장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="3" class="chapter">
-      <h2>제 3장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="3" class="chapter">
+        <h2>제 3장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="4" class="chapter">
-      <h2>제 4장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="4" class="chapter">
+        <h2>제 4장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="5" class="chapter">
-      <h2>제 5장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="5" class="chapter">
+        <h2>제 5장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="6" class="chapter">
-      <h2>제 6장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="6" class="chapter">
+        <h2>제 6장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="7" class="chapter">
-      <h2>제 7장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="7" class="chapter">
+        <h2>제 7장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="8" class="chapter">
-      <h2>제 8장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="8" class="chapter">
+        <h2>제 8장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="9" class="chapter">
-      <h2>제 9장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="9" class="chapter">
+        <h2>제 9장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="10" class="chapter">
-      <h2>제 10장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
+      <section id="10" class="chapter">
+        <h2>제 10장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
 
-    <section id="EX" class="chapter">
-      <h2>EX장</h2>
-      <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-    </section>
-  </main>
+      <section id="EX" class="chapter">
+        <h2>EX장</h2>
+        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
+      </section>
+
+    </main>
+  </div>
 </div>
 
 <script>
