--- a/bible_chapter.html
+++ b/bible_chapter.html
@@ -10,22 +10,29 @@
 
 <style>
 :root{
-  --header-height:88px; /* header two-line height approximation */
-  --bg:#f6f8fb; --card:#fff; --line:#e5e7eb; --accent:#2563eb; --accent-2:#ffb86b;
-  --muted:#475569; --text:#0f172a; --text-strong:#071035; --shadow:rgba(10,20,40,0.06);
-  --toc-width:260px; --toc-gap:28px; /* TOC width and gap from content */
-  --content-base:880px; /* original content width used previously */
-  --content-width: calc(var(--content-base) * 2.5); /* 2.5× width */
+  --header-height:88px;             /* header two-line height */
+  --bg:#f6f8fb; --card:#fff; --line:#e5e7eb;
+  --accent:#2563eb; --accent-2:#ffb86b;
+  --muted:#475569; --text:#0f172a; --text-strong:#071035;
+  --shadow:rgba(10,20,40,0.06);
+  --toc-width:220px;                /* fixed TOC width */
+  --toc-left:36px;                  /* distance from left edge for TOC */
+  --toc-top-offset: calc(var(--header-height) + 40px); /* lower than header */
+  --content-max: 920px;             /* main content max width (slightly reduced) */
 }
 html.dark{
-  --bg:#071018; --card:#0b1724; --line:#12202a; --accent:#ffd166; --accent-2:#ffb86b;
+  --bg:#071018; --card:#0b1724; --line:#12202a;
+  --accent:#ffd166; --accent-2:#ffb86b;
   --muted:#9aa0ab; --text:#eaf6ff; --text-strong:#fff;
+  --shadow: rgba(0,0,0,0.45);
 }
 *{box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased}
 
-/* Header: copied structure and styles from index.html to remain identical */
+/* --------------------------
+   Header (copied style from index.html)
+   -------------------------- */
 .header{ background:var(--card); border-bottom:1px solid var(--line); position:sticky; top:0; z-index:1000; }
 .header-top{ display:flex; align-items:center; justify-content:space-between; gap:0.75rem; padding:0.6rem 18px; width:100%; box-sizing:border-box; }
 .brand{ display:flex; align-items:center; gap:0.7rem; text-decoration:none; color:var(--text); }
@@ -36,7 +43,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 .sp-badge{ padding:0 12px; border-radius:8px; background:transparent; border:1px solid var(--line); font-weight:800; color:var(--accent); min-width:160px; text-align:center; height:40px; display:flex; align-items:center; justify-content:center; font-size:14px; }
 .myhome-btn{ padding:0 12px; border-radius:8px; border:1px solid var(--line); background:var(--card); font-weight:700; color:var(--text); cursor:pointer; height:40px; display:flex; align-items:center; justify-content:center; font-size:14px; box-shadow:0 2px 6px rgba(0,0,0,0.04); text-decoration:none; }
 
-/* Nav: same as index.html */
+/* Nav row exactly as index */
 .nav-row{ display:flex; align-items:center; justify-content:space-between; gap:0.6rem; padding:0.45rem 18px; border-top:1px solid var(--line); background:transparent; box-sizing:border-box; }
 .nav-left{ display:flex; gap:0.6rem; align-items:center; }
 .nav-left a{ text-decoration:none; padding:0.45rem 0.9rem; border-radius:8px; font-weight:700; color:var(--muted); font-size:0.95rem; }
@@ -51,42 +58,64 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 .theme-switch input:checked + .slider{ background: linear-gradient(90deg,var(--accent),var(--accent-2)); }
 .theme-switch input:checked + .slider::before{ transform: translateX(20px); }
 
-/* Layout: TOC sits to the right of centered content. content is centered and 2.5× wider. */
-.container{ max-width:1180px; margin:1.6rem auto; padding:0 18px; display:block; }
-.page-wrap{ display:flex; gap:20px; align-items:flex-start; }
+/* --------------------------
+   Layout: fixed left TOC + centered content
+   -------------------------- */
+.container{ max-width:1200px; margin:1.6rem auto; padding:0 18px; }
 
-/* Position TOC to the right of centered content using calc based on content width so they won't overlap. */
-.toc-wrap{ position:fixed; top:calc(var(--header-height) + 72px); /* moved slightly lower */
-  left: calc(50% + (var(--content-width) / 2) + var(--toc-gap));
+/* fixed TOC - left remote position (always visible) */
+.toc-wrap{
+  position:fixed;
+  left: var(--toc-left);
+  top: var(--toc-top-offset);
   width: var(--toc-width);
   z-index:1200;
 }
-.toc{ background:var(--card); border-radius:10px; padding:12px; border:1px solid var(--line); box-shadow:0 8px 22px var(--shadow); }
+.toc{
+  background:var(--card);
+  border-radius:10px;
+  padding:12px;
+  border:1px solid var(--line);
+  box-shadow:0 8px 22px var(--shadow);
+}
 .toc h3{ margin:0 0 8px 0; font-size:1rem; font-weight:900; color:var(--text-strong); }
 .toc a{ display:block; padding:8px 10px; border-radius:8px; text-decoration:none; color:var(--muted); font-weight:800; margin-bottom:6px; }
 .toc a:hover{ background:rgba(99,102,241,0.06); color:var(--accent); }
 
-/* Content centered and widened */
-.content{ width: var(--content-width); max-width:none; margin:0 auto; background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent); border-radius:12px; padding:20px; box-shadow:0 12px 30px rgba(0,0,0,0.06); }
+/* active link style */
+.toc a.active{
+  background: linear-gradient(90deg, rgba(37,99,235,0.12), rgba(255,184,107,0.06));
+  color: var(--accent);
+  font-weight:900;
+}
 
+/* content centered; slightly reduced width to avoid visual collision */
+.content{
+  width: min(var(--content-max), calc(100% - 120px)); /* responsive safety */
+  max-width: var(--content-max);
+  margin: 0 auto;
+  background: linear-gradient(180deg, rgba(255,255,255,0.02), transparent);
+  border-radius:12px;
+  padding:20px;
+  box-shadow:0 12px 30px rgba(0,0,0,0.06);
+}
+
+/* page title and chapter blocks */
 .page-title{ font-size:2rem; font-weight:900; margin:4px 0 16px 0; color:var(--text-strong); }
-
-/* chapter block -- ensure anchor target visible below fixed header */
 .chapter{ background:var(--card); border:1px solid var(--line); border-radius:10px; padding:18px; margin-bottom:18px; box-shadow:0 6px 18px var(--shadow); scroll-margin-top:calc(var(--header-height) + 16px); }
 .chapter h2{ margin:0 0 10px 0; font-size:1.25rem; color:var(--text-strong); }
 .chapter p{ margin:0; color:var(--muted); line-height:1.9; white-space:pre-wrap; }
 
-/* responsive: on small screens TOC becomes relative and content margin removed */
-@media(max-width:1200px){
-  :root{ --content-base:720px; --content-width: calc(var(--content-base) * 2.0); }
-  .toc-wrap{ position:fixed; left: auto; right:18px; top:calc(var(--header-height) + 60px); }
-  .content{ width: calc(100% - 40px); margin: 0 20px; }
+/* small screens: TOC becomes top relative element */
+@media(max-width:1100px){
+  .toc-wrap{ position:relative; left:auto; top:auto; width:100%; margin:16px 0; }
+  .content{ width:100%; max-width:none; padding:16px; }
 }
 
-@media(max-width:980px){
-  .toc-wrap{ position:relative; left:auto; top:auto; width:100%; margin-bottom:12px; }
-  .content{ margin-left:0; width:100%; }
-  .page-wrap{ display:block; }
+/* ensure TOC does not cover scrollbar on very narrow desktops */
+@media (min-width:1200px) and (max-width:1400px){
+  /* nudge TOC slightly right if needed */
+  .toc-wrap{ left: calc(var(--toc-left) + 8px); }
 }
 </style>
 </head>
@@ -124,89 +153,45 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 </header>
 
 <div class="container">
-  <div class="page-wrap">
-    <div class="toc-wrap">
-      <nav class="toc" aria-label="목차">
-        <h3>목차</h3>
-        <a href="bible_chapter.html#1">1장</a>
-        <a href="bible_chapter.html#2">2장</a>
-        <a href="bible_chapter.html#3">3장</a>
-        <a href="bible_chapter.html#4">4장</a>
-        <a href="bible_chapter.html#5">5장</a>
-        <a href="bible_chapter.html#6">6장</a>
-        <a href="bible_chapter.html#7">7장</a>
-        <a href="bible_chapter.html#8">8장</a>
-        <a href="bible_chapter.html#9">9장</a>
-        <a href="bible_chapter.html#10">10장</a>
-        <a href="bible_chapter.html#EX">EX장</a>
-        <a href="bible_photos.html">사진</a>
-      </nav>
-    </div>
-
-    <main class="content" id="mainContent">
-      <h1 class="page-title">자쿠드 성경 — 본문</h1>
-
-      <section id="1" class="chapter">
-        <h2>제 1장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="2" class="chapter">
-        <h2>제 2장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="3" class="chapter">
-        <h2>제 3장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="4" class="chapter">
-        <h2>제 4장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="5" class="chapter">
-        <h2>제 5장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="6" class="chapter">
-        <h2>제 6장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="7" class="chapter">
-        <h2>제 7장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="8" class="chapter">
-        <h2>제 8장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="9" class="chapter">
-        <h2>제 9장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="10" class="chapter">
-        <h2>제 10장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-      <section id="EX" class="chapter">
-        <h2>EX장</h2>
-        <p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p>
-      </section>
-
-    </main>
+  <!-- fixed TOC remote (left) -->
+  <div class="toc-wrap" aria-hidden="false">
+    <nav class="toc" aria-label="목차">
+      <h3>목차</h3>
+      <a class="toc-link" href="#1" data-target="1">1장</a>
+      <a class="toc-link" href="#2" data-target="2">2장</a>
+      <a class="toc-link" href="#3" data-target="3">3장</a>
+      <a class="toc-link" href="#4" data-target="4">4장</a>
+      <a class="toc-link" href="#5" data-target="5">5장</a>
+      <a class="toc-link" href="#6" data-target="6">6장</a>
+      <a class="toc-link" href="#7" data-target="7">7장</a>
+      <a class="toc-link" href="#8" data-target="8">8장</a>
+      <a class="toc-link" href="#9" data-target="9">9장</a>
+      <a class="toc-link" href="#10" data-target="10">10장</a>
+      <a class="toc-link" href="#EX" data-target="EX">EX장</a>
+      <a class="toc-link" href="bible_photos.html">사진</a>
+    </nav>
   </div>
+
+  <!-- centered content -->
+  <main class="content" id="mainContent">
+    <h1 class="page-title">자쿠드 성경 — 본문</h1>
+
+    <section id="1" class="chapter"><h2>제 1장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="2" class="chapter"><h2>제 2장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="3" class="chapter"><h2>제 3장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="4" class="chapter"><h2>제 4장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="5" class="chapter"><h2>제 5장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="6" class="chapter"><h2>제 6장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="7" class="chapter"><h2>제 7장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="8" class="chapter"><h2>제 8장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="9" class="chapter"><h2>제 9장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="10" class="chapter"><h2>제 10장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+    <section id="EX" class="chapter"><h2>EX장</h2><p>ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ ㅇㅇ</p></section>
+  </main>
 </div>
 
 <script>
-/* nav active highlight (bible) */
+/* nav active highlight for top nav (bible) */
 (function(){
   const path = location.pathname.split('/').pop() || 'index.html';
   const map = { 'index.html':'nav-index', '':'nav-index', 'worship.html':'nav-worship', 'bible.html':'nav-bible', 'generator.html':'nav-generator', 'bible_chapter.html':'nav-bible' };
@@ -214,7 +199,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
   if(id){ const el=document.getElementById(id); if(el) el.classList.add('active'); }
 })();
 
-/* theme toggle persistence */
+/* theme toggle - persist */
 (function(){
   const toggle = document.getElementById('themeToggle');
   const saved = localStorage.getItem('theme');
@@ -228,7 +213,7 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
   });
 })();
 
-/* top SP badge value if available */
+/* SP badge show stored display if available */
 (function applyTopState(){
   try{
     const alt = localStorage.getItem('zk_sp_v1');
@@ -237,6 +222,89 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
   }catch(e){}
 })();
 setInterval(applyTopState, 1500);
+
+/* --------------------------
+   Current-chapter highlight (scroll spy)
+   - uses IntersectionObserver to mark toc link for the section mostly visible
+   - also handles direct hash navigation
+   -------------------------- */
+(function(){
+  const links = Array.from(document.querySelectorAll('.toc .toc-link'));
+  const sections = links.map(l => document.getElementById(l.dataset.target)).filter(Boolean);
+
+  // map id -> link
+  const linkById = {};
+  links.forEach(l => { if(l.dataset.target) linkById[l.dataset.target] = l; });
+
+  function clearActive(){
+    links.forEach(l=>l.classList.remove('active'));
+  }
+  function setActive(id){
+    clearActive();
+    const ln = linkById[id];
+    if(ln) ln.classList.add('active');
+  }
+
+  // IntersectionObserver to choose the most visible section
+  let currentId = null;
+  const obs = new IntersectionObserver((entries)=>{
+    // pick entry with largest intersectionRatio
+    let maxEntry = null;
+    for(const e of entries){
+      if(!maxEntry || e.intersectionRatio > maxEntry.intersectionRatio) maxEntry = e;
+    }
+    if(maxEntry && maxEntry.isIntersecting){
+      const id = maxEntry.target.id;
+      if(id !== currentId){
+        currentId = id;
+        setActive(id);
+        // update URL hash without scrolling
+        history.replaceState(null, '', '#' + id);
+      }
+    }
+  }, { root: null, rootMargin: `-${Math.floor(window.innerHeight*0.3)}px 0px -${Math.floor(window.innerHeight*0.3)}px 0px`, threshold: [0.01, 0.25, 0.5, 0.75, 1] });
+
+  sections.forEach(s => obs.observe(s));
+
+  // handle clicks on toc links: smooth scroll and active
+  links.forEach(l=>{
+    l.addEventListener('click', (ev)=>{
+      // if link is external (photo), skip
+      const href = l.getAttribute('href') || '';
+      if(href.startsWith('#')){
+        ev.preventDefault();
+        const targetId = l.dataset.target;
+        const el = document.getElementById(targetId);
+        if(el){
+          // scroll into view accounting for header
+          const top = el.getBoundingClientRect().top + window.pageYOffset - (parseInt(getComputedStyle(document.documentElement).getPropertyValue('--header-height')) || 88) - 12;
+          window.scrollTo({ top, behavior: 'smooth' });
+          // set active immediately
+          clearActive(); l.classList.add('active');
+          history.replaceState(null, '', '#' + targetId);
+        }
+      }
+    });
+  });
+
+  // on load, if there's a hash, scroll to it properly
+  window.addEventListener('load', ()=>{
+    const h = location.hash.replace('#','');
+    if(h){
+      const el = document.getElementById(h);
+      if(el){
+        const top = el.getBoundingClientRect().top + window.pageYOffset - (parseInt(getComputedStyle(document.documentElement).getPropertyValue('--header-height')) || 88) - 12;
+        window.scrollTo({ top, behavior:'instant' in window ? 'instant' : 'auto' });
+        // small delay to set active properly
+        setTimeout(()=> setActive(h), 120);
+      }
+    } else {
+      // set first as active by default
+      setTimeout(()=>{ setActive('1'); }, 80);
+    }
+  });
+})();
+
 </script>
 </body>
 </html>
