--- a/bible_chapter.html
+++ b/bible_chapter.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>자쿠드 성경 — 본문</title>
+<title>자쿠드 성경</title>
 
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;600;800&display=swap" rel="stylesheet">
@@ -123,9 +123,9 @@ body{margin:0;font-family:"Noto Sans KR",system-ui,Arial;background:var(--bg);co
 
 <header class="header">
   <div class="header-top">
-    <a class="brand" href="index.html" title="자쿠드 숭배 시뮬레이션">
+    <a class="brand" href="index.html" title="자쿠드 숭배 시뮬레이터">
       <img id="siteLogo" src="https://i.ibb.co/g8WwFK7/JAKUDS.png" alt="자쿠드 로고" onerror="this.onerror=null;this.src='/assets/logo.png'">
-      <span class="title">자쿠드 숭배 시뮬레이션</span>
+      <span class="title">자쿠드 숭배 시뮬레이터</span>
     </a>
 
     <div class="right-controls">
